fixed the div alignment

--- a/rubyfullstack/course4/module2/css/styles.css
+++ b/rubyfullstack/course4/module2/css/styles.css
@@ -20,9 +20,11 @@ p {
 
 div.center {
 	margin: 0 auto;
+	text-align: center;
 }
 
 section {
+	text-align: left;
 	border: 1px solid black;
 	overflow: auto;
 	width: 30%;
